MDK-ARM/Drone/compiler.log
>>> cc





./../User/Task/tsk_config_and_callback.cpp:403:8: error: no matching function for call to 'HAL_CAN_GetTxMailboxesFreeLevel'
    if(HAL_CAN_GetTxMailboxesFreeLevel() != 0){
       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../Drivers/STM32F4xx_HAL_Driver/Inc\stm32f4xx_hal_can.h:691:10: note: candidate function not viable: requires single argument 'hcan', but no arguments were provided
uint32_t HAL_CAN_GetTxMailboxesFreeLevel(const CAN_HandleTypeDef *hcan);
         ^
1 error generated.

>>> ld

